--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Ignore "persisted-data" folder
+persisted-data/
+
 # User-specific files
 *.rsuser
 *.suo
