--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         # Update 'VARIANT' to pick a version of .NET: 3.1-focal, 5.0-focal, 6.0-focal
         VARIANT: "6.0-focal"
         # Optional version of Node.js
-        NODE_VERSION: "none"
+        NODE_VERSION: "lts/*"
 
     volumes:
       - ..:/workspace:cached
