--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -21,6 +21,7 @@ services:
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
     # network_mode: service:db
+    network_mode: host
     # Uncomment the next line to use a non-root user for all processes.
     # user: vscode
 
@@ -37,6 +38,7 @@ services:
       - ./persisted-data/mssql/data:/var/opt/mssql/data/
       - ./persisted-data/mssql/log:/var/opt/mssql/log/
       - ./persisted-data/mssql/secrets:/var/opt/mssql/secrets/
+    network_mode: host
 
     # Add "forwardPorts": ["1433"] to **devcontainer.json** to forward MSSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
