--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
     volumes:
       - ..:/workspace:cached
-      - ./persisted-data/.aspnet:/root/.aspnet/
+#      - ./persisted-data/.aspnet:/root/.aspnet/
 
 
     # Overrides default command so things don't shut down after the process ends.
@@ -34,11 +34,10 @@ services:
     environment:
       SA_PASSWORD: P@ssw0rd
       ACCEPT_EULA: Y
-    volumes:
-      - ./persisted-data/mssql/data:/var/opt/mssql/data/
-      - ./persisted-data/mssql/log:/var/opt/mssql/log/
-      - ./persisted-data/mssql/secrets:/var/opt/mssql/secrets/
-    network_mode: host
+ #   volumes:
+ #     - ./persisted-data/mssql/data:/var/opt/mssql/data/
+ #     - ./persisted-data/mssql/log:/var/opt/mssql/log/
+ #     - ./persisted-data/mssql/secrets:/var/opt/mssql/secrets/
 
     # Add "forwardPorts": ["1433"] to **devcontainer.json** to forward MSSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
