--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -35,9 +35,9 @@ services:
       SA_PASSWORD: P@ssw0rd
       ACCEPT_EULA: Y
     volumes:
-      - ./persisted-data/mssql/data:/var/opt/mssql/data/
-      - ./persisted-data/mssql/log:/var/opt/mssql/log/
-      - ./persisted-data/mssql/secrets:/var/opt/mssql/secrets/
+      - mssqldata:/var/opt/mssql/data/
+      - mssqllog:/var/opt/mssql/log/
+      - mssqlsecrets:/var/opt/mssql/secrets/
 
     # Add "forwardPorts": ["1433"] to **devcontainer.json** to forward MSSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
